--- a/WeatherInformer/WeatherInformer.csproj
+++ b/WeatherInformer/WeatherInformer.csproj
@@ -46,6 +46,12 @@
         <Reference Include="System.Xml" />
     </ItemGroup>
     <ItemGroup>
+        <Compile Include="ClothesChooseForm.cs">
+          <SubType>Form</SubType>
+        </Compile>
+        <Compile Include="ClothesChooseForm.Designer.cs">
+          <DependentUpon>ClothesChooseForm.cs</DependentUpon>
+        </Compile>
         <Compile Include="DB.cs" />
         <Compile Include="Form1.cs">
             <SubType>Form</SubType>
@@ -61,6 +67,9 @@
         </Compile>
         <Compile Include="Program.cs" />
         <Compile Include="Properties\AssemblyInfo.cs" />
+        <EmbeddedResource Include="ClothesChooseForm.resx">
+          <DependentUpon>ClothesChooseForm.cs</DependentUpon>
+        </EmbeddedResource>
         <EmbeddedResource Include="Form1.resx">
           <DependentUpon>Form1.cs</DependentUpon>
         </EmbeddedResource>
