--- a/WeatherInformer/WeatherInformer.csproj
+++ b/WeatherInformer/WeatherInformer.csproj
@@ -67,6 +67,12 @@
         </Compile>
         <Compile Include="Program.cs" />
         <Compile Include="Properties\AssemblyInfo.cs" />
+        <Compile Include="WeatherInformerForm.cs">
+          <SubType>Form</SubType>
+        </Compile>
+        <Compile Include="WeatherInformerForm.Designer.cs">
+          <DependentUpon>WeatherInformerForm.cs</DependentUpon>
+        </Compile>
         <EmbeddedResource Include="ClothesChooseForm.resx">
           <DependentUpon>ClothesChooseForm.cs</DependentUpon>
         </EmbeddedResource>
@@ -85,6 +91,9 @@
             <AutoGen>True</AutoGen>
             <DependentUpon>Resources.resx</DependentUpon>
         </Compile>
+        <EmbeddedResource Include="WeatherInformerForm.resx">
+          <DependentUpon>WeatherInformerForm.cs</DependentUpon>
+        </EmbeddedResource>
         <None Include="Properties\Settings.settings">
             <Generator>SettingsSingleFileGenerator</Generator>
             <LastGenOutput>Settings.Designer.cs</LastGenOutput>
