--- a/WeatherInformer/WeatherInformer.csproj
+++ b/WeatherInformer/WeatherInformer.csproj
@@ -46,6 +46,12 @@
         <Reference Include="System.Xml" />
     </ItemGroup>
     <ItemGroup>
+        <Compile Include="AddClothesForm.cs">
+          <SubType>Form</SubType>
+        </Compile>
+        <Compile Include="AddClothesForm.Designer.cs">
+          <DependentUpon>AddClothesForm.cs</DependentUpon>
+        </Compile>
         <Compile Include="ClothesChooseForm.cs">
           <SubType>Form</SubType>
         </Compile>
@@ -73,6 +79,9 @@
         <Compile Include="WeatherInformerForm.Designer.cs">
           <DependentUpon>WeatherInformerForm.cs</DependentUpon>
         </Compile>
+        <EmbeddedResource Include="AddClothesForm.resx">
+          <DependentUpon>AddClothesForm.cs</DependentUpon>
+        </EmbeddedResource>
         <EmbeddedResource Include="ClothesChooseForm.resx">
           <DependentUpon>ClothesChooseForm.cs</DependentUpon>
         </EmbeddedResource>
