--- a/WeatherInformer/WeatherInformer.csproj
+++ b/WeatherInformer/WeatherInformer.csproj
@@ -59,22 +59,15 @@
           <DependentUpon>ClothesChooseForm.cs</DependentUpon>
         </Compile>
         <Compile Include="DB.cs" />
-        <Compile Include="Form1.cs">
-            <SubType>Form</SubType>
-        </Compile>
-        <Compile Include="Form1.Designer.cs">
-            <DependentUpon>Form1.cs</DependentUpon>
-        </Compile>
-        <Compile Include="HelloUserForm.cs">
+        <Compile Include="RegistrationForm.cs">
           <SubType>Form</SubType>
         </Compile>
-        <Compile Include="HelloUserForm.Designer.cs">
-          <DependentUpon>HelloUserForm.cs</DependentUpon>
+        <Compile Include="RegistrationForm.Designer.cs">
+          <DependentUpon>RegistrationForm.cs</DependentUpon>
         </Compile>
         <Compile Include="IWeatherSite.cs" />
         <Compile Include="Program.cs" />
         <Compile Include="Properties\AssemblyInfo.cs" />
-        <Compile Include="TranslitMethods.cs" />
         <Compile Include="UserNameAndPasswordForm.cs">
           <SubType>Form</SubType>
         </Compile>
@@ -87,18 +80,15 @@
         <Compile Include="WeatherInformerForm.Designer.cs">
           <DependentUpon>WeatherInformerForm.cs</DependentUpon>
         </Compile>
-        <Compile Include="WorldWeatherSite.cs" />
+        <Compile Include="WeatherSite.cs" />
         <EmbeddedResource Include="AddClothesForm.resx">
           <DependentUpon>AddClothesForm.cs</DependentUpon>
         </EmbeddedResource>
         <EmbeddedResource Include="ClothesChooseForm.resx">
           <DependentUpon>ClothesChooseForm.cs</DependentUpon>
         </EmbeddedResource>
-        <EmbeddedResource Include="Form1.resx">
-          <DependentUpon>Form1.cs</DependentUpon>
-        </EmbeddedResource>
-        <EmbeddedResource Include="HelloUserForm.resx">
-          <DependentUpon>HelloUserForm.cs</DependentUpon>
+        <EmbeddedResource Include="RegistrationForm.resx">
+          <DependentUpon>RegistrationForm.cs</DependentUpon>
         </EmbeddedResource>
         <EmbeddedResource Include="Properties\Resources.resx">
             <Generator>ResXFileCodeGenerator</Generator>
